--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Kushal Portfolio",
+    "name": "Kushal Pipaliya Portfolio",
     "short_name": "KP Portfolio",
     "description": "Explore the impressive portfolio of Kushal Pipaliya, a skilled Web Developer and Penetration Tester.",
     "start_url": "/",
